# SKN_30_project1

./: .gitignore  Project_기능정리  README.md  Streamlit_main.py  app.py  app2.py  data_set_ev_charging_stations.csv  data_set_faq.csv  data_set_fuel_types.csv  data_set_seoul_districts.csv  main.py  pyproject.toml
crawling/: crawling_nuri.py  crawling_seoul.py  crawling_sino.py  pyproject.toml
crawling/csv/: nuri.csv  seoul.csv  sino.csv
data/: charge-sino.csv  data_set_ev_charging_stations.csv  data_set_faq.csv  data_set_fuel_types.csv  data_set_seoul_districts.csv  requirements.txt  seoul_ev_data.py  year_amount.csv
data/data_faq/: charge_faq.csv  seoul_faq.csv
db_csv/: data_set_ev_charging_stations.csv  data_set_faq.csv  data_set_seoul_car_registrations.csv
